# ai-hackathon-template

./: .gitignore  LICENSE  Makefile  README.md
.github/: copilot-instructions.md
.github/workflows/: deploy.yaml
backend/: .dockerignore  .gitignore  Dockerfile  Makefile  pyproject.toml
backend/app/: constants.py  main.py
backend/app/weights/: best.pt
backend/research/: .gitignore  Makefile  pyproject.toml  train.py
backend/research/research/: datasets.py  models.py
frontend/: index.html  playwright.config.ts  tailwind.config.ts
frontend/src/: index.css
frontend/src/components/: APISection.tsx  CateringSection.tsx  ContactSection.tsx  DemoSection.tsx  Footer.tsx  HeroSection.tsx  Navbar.tsx  RoomsSection.tsx  ServicesSection.tsx  UseCasesSection.tsx
frontend/src/pages/: Index.tsx
